<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mcl.yin50.MainActivity" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/title"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_claim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/claim" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_title"
        android:layout_alignRight="@+id/tv_title"
        android:layout_below="@+id/tv_claim"
        android:layout_marginTop="45dp"
        android:onClick="startExercise"
        android:text="@string/ok" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_ok"
        android:layout_alignRight="@+id/btn_ok"
        android:layout_below="@+id/btn_ok"
        android:layout_marginTop="34dp"
        android:onClick="startLearn"
        android:text="@string/cancel" />

</RelativeLayout>
